# catSurv

./: .Rbuildignore  .gitignore  Benchmarking.R  BuildCatPackHowTo.R  CRAN-SUBMISSION  DESCRIPTION  EAPEstimator.h  ErinNotes.txt  LTM_Testing.R  MLE_Testing.R  Makevars.win  NAMESPACE  NEWS.md  README.Rmd  README.md  benchmark-selectItem.R  catSurv deliverables.docx  catSurv deliverables.txt  catSurv write-up.txt  catSurvDevelopment-Erin.R  catSurvDevelopment.R  cran-comments.md  eqModel.txt  factor.scores.tpm.correct.R  narcModel.txt  needDocumentation.txt  nfaCat.txt  nfc.rda  test-noAnswers.R  tests and functionality to add.txt  tests to add.txt
OLDtestthat/: test-d2ll.R  test-dll.R  test-estimateSE-WLE.R  test-estimateSE-vs-ltm.R  test-estimateTheta-MLE.R  test-expectedObsInf.R  test-fisherInf.R  test-nextItemEPV-CatR.R  test-nextItemEPV.R  test-nextItemMFI.R  test-nextitemMLWI.R
R/: Cat-class.R  RcppExports.R  allEst.R  allFish.R  data.R  estimateThetas.R  fromJSONCat.R  gpcmCat.R  grmCat.R  jsonCat.R  ltmCat.R  makeTree.R  onAttach.R  oracle.R  plot.Cat.R  plot.R  processAJAX.R  readQualtrics.R  selectItem_qualtrics.R  simulateFisherInfo.R  simulateRespondents.R  simulateThetas.R  storeAnswer.R  toJSONCat.R  tpmCat.R
catSurv/: .Rapp.history  .Rbuildignore  CompareKL.R  DESCRIPTION  NAMESPACE  NEWS.md  README.Rmd  README.md  catSurv write-up.txt  cran-comments.md
catSurv/src/: CMakeLists.txt  Cat-class.cpp  Cat-class.h  Cat.cpp  Cat.h  CheckRules.cpp  CheckRules.h  Difficulty.cpp  Difficulty.h  EAPEstimator.cpp  EAPEstimator.h  EPVSelector.cpp  EPVSelector.h  Estimator.cpp  Estimator.h  GSLFunctionWrapper.cpp  Integrator.cpp  Integrator.h  KLSelector.cpp  KLSelector.h  LKLSelector.cpp  MAPEstimator.cpp  MAPEstimator.h  MEISelector.cpp  MEISelector.h  MFIISelector.cpp  MFIISelector.h  MFISelector.cpp  MFISelector.h  MLEEstimator.cpp  MLEEstimator.h  MLWISelector.cpp  MPWISelector.cpp  MWPISelector.cpp  MWPISelector.h  Makevars  Makevars.win  NotImplementedException.cpp  NotImplementedException.h  PKLSelector.cpp  (+18 more)
catSurv/src/Estimation/: EAPEstimator.cpp  EAPEstimator.h  Estimator.h
catSurv/src/Integration/: Integrator.h  TrapezoidIntegrator.cpp  TrapezoidIntegrator.h
catSurv/src/Prior/: Prior.cpp  Prior.h
catSurv/src/Selection/: EPVSelector.cpp  EPVSelector.h  Selector.h
catSurvOLD/: DESCRIPTION
data/: agree_cat.rda  consc_cat.rda  empathy_cat.rda  ex_qualtrics_results.rda  ex_qualtrics_results_multiple.rda  (+23 more)
(+346 files in other folders)
